Wirefremes for the V3 - Note category, view note, search note

--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
-application: subhasis-dutta
-version: 2
+application: subhasisnotebook
+version: 3
 runtime: python27
 api_version: 1
 threadsafe: true
